Fixed resizing bug when drag and dropping a big card in overflowing bucket

--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,8 @@
 body {
     background-color: #131314;
     color: white;
-    display: flex;
+    display: grid;
+    grid-template-rows: 3rem calc(100vh - 3rem);
     height: 100vh;
     flex-direction: column;
     font-family: 'Segoe UI', 'Segoe UI Web (West European)', -apple-system, BlinkMacSystemFont, Roboto, 'Helvetica Neue', sans-serif;
@@ -12,16 +13,13 @@ body {
 
 #top_header {
     background-color: #1b1b1b;
-    height: 3rem;
 }
 
 #main_container {
     display: flex;
     flex-direction: row;
-    flex-grow: 1;
     gap: 2rem;
     justify-content: center;
-    overflow: hidden;
     padding: 3rem 5rem;
 }
 
